--- a/style.css
+++ b/style.css
@@ -3,7 +3,53 @@ span {
 }
 
 #heading-border {
-  margin-left: 50px;
   border-left: 3px solid red;
   padding-left: 5px;
+}
+.button {
+  text-decoration: none;
+  background-color: yellowgreen;
+  padding: 15px 20px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+  display: inline-block;
+}
+#left-margin {
+  margin-left: 50px;
+}
+img {
+  width: 50%;
+  margin-left: 100px;
+}
+#section-1 {
+  display: inline-flex;
+}
+/* ! */
+#section-2 {
+  display: inline-flex;
+}
+.mission-1 {
+  width: 400px;
+  height: 400px;
+  display: inline-block;
+  background-color: rgb(236, 233, 229);
+  border-radius: 5px;
+  padding-left: 30px;
+}
+.mission-2 {
+  width: 400px;
+  height: 400px;
+  display: inline-block;
+  background-color: rgb(215, 245, 250);
+  border-radius: 5px;
+  padding-left: 30px;
+}
+.mission-3 {
+  width: 400px;
+  height: 400px;
+  display: inline-block;
+  background-color: rgb(188, 235, 202);
+  border-radius: 5px;
+  padding-left: 30px;
 }
