Section-2 is done

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+#section-1 {
+  display: inline-flex;
+}
 span {
   color: cornflowerblue;
 }
@@ -22,34 +25,44 @@ img {
   width: 50%;
   margin-left: 100px;
 }
-#section-1 {
-  display: inline-flex;
-}
+
 /* ! */
 #section-2 {
   display: inline-flex;
 }
+#my-mission {
+  text-align: center;
+  font-size: 50px;
+}
 .mission-1 {
-  width: 400px;
+  width: 350px;
   height: 400px;
   display: inline-block;
   background-color: rgb(236, 233, 229);
   border-radius: 5px;
-  padding-left: 30px;
+  padding-left: 50px;
+  margin-left: 120px;
+  margin-right: 80px;
 }
 .mission-2 {
-  width: 400px;
+  width: 350px;
+
   height: 400px;
   display: inline-block;
   background-color: rgb(215, 245, 250);
   border-radius: 5px;
   padding-left: 30px;
+  margin-right: 80px;
 }
 .mission-3 {
-  width: 400px;
+  width: 350px;
   height: 400px;
   display: inline-block;
   background-color: rgb(188, 235, 202);
   border-radius: 5px;
   padding-left: 30px;
+  
+}
+#Missions {
+  margin: auto;
 }
