--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-#section-1 {
+h1 {
+  font-size: 50px;
+}
+p {
+  width: 300px;
+  margin: auto;
+  overflow: auto;
+}
+.section-1 {
   display: inline-flex;
 }
 span {
@@ -21,18 +29,19 @@ span {
 #left-margin {
   margin-left: 50px;
 }
+#img-1{
+  margin-left: 400px;
+}
 img {
   width: 50%;
-  margin-left: 100px;
+  margin-left: 50px;
 }
 
 /* ! */
-#section-2 {
-  display: inline-flex;
-}
+
 #my-mission {
   text-align: center;
-  font-size: 50px;
+  /* font-size: 50px; */
 }
 .mission-1 {
   width: 350px;
@@ -61,8 +70,45 @@ img {
   background-color: rgb(188, 235, 202);
   border-radius: 5px;
   padding-left: 30px;
-  
 }
 #Missions {
   margin: auto;
+}
+/* ! */
+#section-3 {
+  display: inline-flex;
+  margin-top: 100px;
+  margin-bottom: 200px;
+  margin-left: 100px;
+  background-image: url(./images/shapes/shape-1.png);
+  background-size: 300px;
+  background-position: left;
+  background-repeat: no-repeat;
+}
+#img-2 {
+  margin-left: 100px;
+}
+/* ! */
+#section-4 {
+  display: inline-flex;
+
+  margin-left: 200px;
+  margin-right: 150px;
+  background-image: url(./images/shapes/shape-1.png);
+  background-size: 300px;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+}
+#img-3 {
+  margin-left: 230px;
+  margin-bottom: 100px;
+}
+/* ! */
+#section-5 {
+  display: inline-block;
+}
+#img-4 {
+  border-radius: 15px;
+  width: 70%;
+  margin-top: 200px;
 }
