--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ span {
 #left-margin {
   margin-left: 50px;
 }
-#img-1{
+#img-1 {
   margin-left: 400px;
 }
 img {
@@ -105,10 +105,13 @@ img {
 }
 /* ! */
 #section-5 {
-  display: inline-block;
+  display: inline-flex;
 }
 #img-4 {
   border-radius: 15px;
-  width: 70%;
-  margin-top: 200px;
+  width: 500px;
+
+  margin-right: 300px;
+}
+#final-part {
 }
