--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ img {
 
   margin-left: 200px;
   margin-right: 150px;
+  margin-bottom: 200px;
   background-image: url(./images/shapes/shape-1.png);
   background-size: 300px;
   background-position: right bottom;
@@ -109,9 +110,14 @@ img {
 }
 #img-4 {
   border-radius: 15px;
-  width: 500px;
+  width: 400px;
 
   margin-right: 300px;
+  margin-left: 300px;
 }
-#final-part {
+#final-part{
+  
+}
+p{
+text-align: justify;
 }
